Sep 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix Half-Life rcon
- primitive external rcon program that is not linked against X (xqf-rcon)

Aug 15, 2002: Jordi Mallach <jordi@sindominio.net>
- fixed a typo in the filter dialog
- updated Catalan & Spanish translations

Aug 10, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed some strings that where marked for translation but the gettext call was
  missing

Aug 09, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed player search to move the visible area to the server on which a player
  was found
- changed some player search dialog a bit
- fixed default tribes2 master port, it's possible to actually add tribes2
  masters now
- made quake_parse_server less picky about number of columns in qstat output

Jul 26, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Catalan and Spanish translations

Jul 26, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- variable number of server filters
- fix segfault when deleting last player filter entry
- update german translation
- better back up your config before trying this new versoin

July 7, 2002: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9.1

Jul 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed segfault when adding servers with no name to favorites
- added RTCW protocol 59

July 4, 2002: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9c

July 3, 2002: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9

Jun 30, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added a short explanation about LAN queries to docu
- added gametypes and dmflags for q3 freezetag

Jun 28, 2002: Jordi Mallach <jordi@sindominio.net>
- new Catalan translation
- added a mnemonic to a menu item

Jun 20, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation

May 20, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- increased servers hash
- added some debug output for hash utilization