@@ -53,6 +53,7 @@
 #include "xpm/un.xpm"
 #include "xpm/rune.xpm"
 #include "xpm/descent3.xpm"
+#include "xpm/ut2.xpm"
 
 #include "xpm/gamespy3d.xpm"
 
@@ -109,6 +110,7 @@ struct pixmap sfs_pix;
 struct pixmap t2_pix;
 struct pixmap hr_pix;
 struct pixmap un_pix;
+struct pixmap ut2_pix;
 struct pixmap rune_pix;
 struct pixmap descent3_pix;
 struct pixmap gamespy3d_pix;
@@ -212,6 +214,7 @@ void free_pixmaps (void) {
   free_pixmap (&t2_pix);
   free_pixmap (&hr_pix);
   free_pixmap (&un_pix);
+  free_pixmap (&ut2_pix);
   free_pixmap (&rune_pix);
   free_pixmap (&descent3_pix);
   free_pixmap (&gamespy3d_pix);
@@ -284,6 +287,7 @@ void init_pixmaps (GtkWidget *window) {
   create_pixmap (window, &t2_pix, t2_xpm);
   create_pixmap (window, &hr_pix, hr2_xpm);
   create_pixmap (window, &un_pix, un_xpm);
+  create_pixmap (window, &ut2_pix, ut2_xpm);
   create_pixmap (window, &rune_pix, rune_xpm);
   create_pixmap (window, &descent3_pix, descent3_xpm);
   create_pixmap (window, &gamespy3d_pix, gamespy3d_xpm);
