@@ -61,6 +61,7 @@ extern	struct pixmap sfs_pix;
 extern	struct pixmap t2_pix;
 extern	struct pixmap hr_pix;
 extern	struct pixmap un_pix;
+extern	struct pixmap ut2_pix;
 extern	struct pixmap rune_pix;
 extern	struct pixmap descent3_pix;
 extern	struct pixmap gamespy3d_pix;
