@@ -1,0 +1,176 @@
+/* XPM */
+static char * ut2_xpm[] = {
+"16 16 157 2",
+"  	c None",
+". 	c #4E493E",
+"+ 	c #6A6354",
+"@ 	c #8C857A",
+"# 	c #9B9488",
+"$ 	c #8F887B",
+"% 	c #877F72",
+"& 	c #726A5D",
+"* 	c #5D574A",
+"= 	c #7D786D",
+"- 	c #C0AF8C",
+"; 	c #897F6C",
+"> 	c #91897D",
+", 	c #948C7F",
+"' 	c #867E72",
+") 	c #AA9F8C",
+"! 	c #7F6E50",
+"~ 	c #665F51",
+"{ 	c #A29C8F",
+"] 	c #EEDDBA",
+"^ 	c #CFB580",
+"/ 	c #91887A",
+"( 	c #81796D",
+"_ 	c #8C8272",
+": 	c #90897B",
+"< 	c #E1D3B7",
+"[ 	c #A38650",
+"} 	c #5F5546",
+"| 	c #625A4C",
+"1 	c #575145",
+"2 	c #A8A399",
+"3 	c #F0DDB7",
+"4 	c #F2DDB2",
+"5 	c #EDD3A0",
+"6 	c #A49065",
+"7 	c #554E41",
+"8 	c #685D48",
+"9 	c #E5D2AA",
+"0 	c #E5BF74",
+"a 	c #6C5B39",
+"b 	c #473F32",
+"c 	c #42392C",
+"d 	c #554E43",
+"e 	c #777267",
+"f 	c #C7B18A",
+"g 	c #765E34",
+"h 	c #C4AB7A",
+"i 	c #F0D7A4",
+"j 	c #A28957",
+"k 	c #3F372B",
+"l 	c #4C4336",
+"m 	c #EADBB8",
+"n 	c #EDCE8F",
+"o 	c #615235",
+"p 	c #3E3628",
+"q 	c #322A1D",
+"r 	c #423A2F",
+"s 	c #B6A68A",
+"t 	c #6B5A3C",
+"u 	c #6C6356",
+"v 	c #C2B293",
+"w 	c #EBCB8C",
+"x 	c #9C8048",
+"y 	c #362E21",
+"z 	c #4A4133",
+"A 	c #DCBF85",
+"B 	c #D3AD60",
+"C 	c #5B4B2D",
+"D 	c #2C2417",
+"E 	c #21190C",
+"F 	c #373126",
+"G 	c #746B58",
+"H 	c #756346",
+"I 	c #6F675A",
+"J 	c #635A4D",
+"K 	c #A59371",
+"L 	c #A37C2F",
+"M 	c #836226",
+"N 	c #30281C",
+"O 	c #4E4535",
+"P 	c #C6A25A",
+"Q 	c #B48833",
+"R 	c #4F3C1C",
+"S 	c #221A0D",
+"T 	c #160F04",
+"U 	c #3E3931",
+"V 	c #827660",
+"W 	c #5C5242",
+"X 	c #564D40",
+"Y 	c #4B4336",
+"Z 	c #A48E64",
+"` 	c #A57E30",
+" .	c #836022",
+"..	c #2D2519",
+"+.	c #423828",
+"@.	c #DAB56C",
+"#.	c #DCAE53",
+"$.	c #4F3D1D",
+"%.	c #221B10",
+"&.	c #171208",
+"*.	c #403B34",
+"=.	c #766F62",
+"-.	c #494134",
+";.	c #40382B",
+">.	c #3E3629",
+",.	c #99835A",
+"'.	c #9E7728",
+").	c #825F21",
+"!.	c #2C2519",
+"~.	c #473E2E",
+"{.	c #CCA659",
+"].	c #D5A647",
+"^.	c #473517",
+"/.	c #2D271F",
+"(.	c #534631",
+"_.	c #605A4E",
+":.	c #31291D",
+"<.	c #352D21",
+"[.	c #473F30",
+"}.	c #B19A6C",
+"|.	c #C99939",
+"1.	c #B28B3E",
+"2.	c #897857",
+"3.	c #C2AC80",
+"4.	c #D1A344",
+"5.	c #CFA042",
+"6.	c #B39353",
+"7.	c #8B7451",
+"8.	c #433C31",
+"9.	c #272013",
+"0.	c #3F3422",
+"a.	c #92733A",
+"b.	c #BE9036",
+"c.	c #CC9D3F",
+"d.	c #DAA948",
+"e.	c #9C701F",
+"f.	c #77581D",
+"g.	c #9E7628",
+"h.	c #785822",
+"i.	c #403C34",
+"j.	c #2F281E",
+"k.	c #231C10",
+"l.	c #302718",
+"m.	c #35250B",
+"n.	c #584017",
+"o.	c #835F21",
+"p.	c #2F220C",
+"q.	c #30291D",
+"r.	c #4F3F26",
+"s.	c #3E3B34",
+"t.	c #302B23",
+"u.	c #272117",
+"v.	c #241E13",
+"w.	c #241E14",
+"x.	c #27221B",
+"y.	c #35302A",
+"z.	c #4A4640",
+"                                ",
+"          . + @ # $ % & *       ",
+"        = - ; > , ' ' ) ! ~     ",
+"      { ] ^ / ( _ : < [ } | 1   ",
+"    2 3 4 5 6 7 8 9 0 a b c d   ",
+"  e f g h i j k l m n o p q r   ",
+"  s t u v w x y z A B C D E F   ",
+"G H I J K L M N O P Q R S T U   ",
+"V W X Y Z `  ...+.@.#.$.%.&.*.  ",
+"=.-.;.>.,.'.).!.~.{.].^./.(.    ",
+"_.:.<.[.}.|.1.2.3.4.5.6.7.      ",
+"  8.9.0.a.b.c.d.e.f.g.h.        ",
+"  i.j.k.l.m.n.o.p.q.r.          ",
+"    s.t.u.v.w.x.y.z.            ",
+"                                ",
+"                                "};
